--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.q20.projectsummer.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+
+        android:paddingBottom="@dimen/btn_main_padding_top_down"
+        android:paddingLeft="@dimen/btn_main_padding_right_left"
+        android:paddingRight="@dimen/btn_main_padding_right_left"
+        android:paddingTop="@dimen/btn_main_padding_top_down">
+
+        <ImageButton
+            android:id="@+id/btn_newGame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_shape"
+            android:backgroundTint="@color/colorA13"
+            android:onClick="onNewGame" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+
+        android:paddingBottom="@dimen/btn_main_padding_top_down"
+        android:paddingLeft="@dimen/btn_main_padding_right_left"
+        android:paddingRight="@dimen/btn_main_padding_right_left"
+        android:paddingTop="@dimen/btn_main_padding_top_down">
+
+
+        <ImageButton
+            android:id="@+id/btn_1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_shape"
+            android:backgroundTint="@color/colorA13"
+            android:layout_weight="1"
+            android:onClick="onAboutUs"/>
+
+        <Space
+            android:layout_width="@dimen/btn_space"
+            android:layout_height="match_parent" />
+
+        <ImageButton
+            android:id="@+id/btn_2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_shape"
+            android:backgroundTint="@color/colorA13"
+            android:layout_weight="1"
+            android:onClick="onRankingMenu"/>
+
+        <Space
+            android:layout_width="@dimen/btn_space"
+            android:layout_height="match_parent" />
+
+
+        <ImageButton
+            android:id="@+id/btn_3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_shape"
+            android:backgroundTint="@color/colorA13"
+            android:layout_weight="1"
+            android:onClick="onTrophyMenu"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" />
+
+
+</LinearLayout>
