--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="btn_radius">8dp</dimen>
+    <dimen name="btn_main_padding_top_down">8dp</dimen>
+    <dimen name="btn_main_padding_right_left">50dp</dimen>
+    <dimen name="btn_space">16dp</dimen>
 </resources>
