--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="btn_main_padding_top_down">8dp</dimen>
     <dimen name="btn_main_padding_right_left">50dp</dimen>
     <dimen name="btn_space">16dp</dimen>
+
+    <dimen name="dialog_new_game_h">300dp</dimen>
+    <dimen name="dialog_new_game_w">150dp</dimen>
 </resources>
