--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,26 +16,6 @@
         android:layout_height="0dp"
         android:layout_weight="3" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-
-        android:paddingBottom="@dimen/btn_main_padding_top_down"
-        android:paddingLeft="@dimen/btn_main_padding_right_left"
-        android:paddingRight="@dimen/btn_main_padding_right_left"
-        android:paddingTop="@dimen/btn_main_padding_top_down">
-
-        <ImageButton
-            android:id="@+id/btn_newGameOnline"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@drawable/btn_shape"
-            android:backgroundTint="@color/colorA13"
-            android:onClick="onNewGameOnline" />
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,13 +28,13 @@
         android:paddingTop="@dimen/btn_main_padding_top_down">
 
         <ImageButton
-            android:id="@+id/btn_newGameLocal"
+            android:id="@+id/btn_newGame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@drawable/btn_shape"
             android:backgroundTint="@color/colorA13"
-            android:onClick="onNewGameLocal" />
+            android:onClick="onNewGame" />
 
     </LinearLayout>
 
@@ -75,10 +56,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/btn_shape"
             android:backgroundTint="@color/colorA13"
-            android:layout_weight="1"
-            android:onClick="onAboutUs"/>
+            android:onClick="onAboutUs" />
 
         <Space
             android:layout_width="@dimen/btn_space"
@@ -89,10 +70,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/btn_shape"
             android:backgroundTint="@color/colorA13"
-            android:layout_weight="1"
-            android:onClick="onRankingMenu"/>
+            android:onClick="onRankingMenu" />
 
         <Space
             android:layout_width="@dimen/btn_space"
@@ -104,10 +85,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/btn_shape"
             android:backgroundTint="@color/colorA13"
-            android:layout_weight="1"
-            android:onClick="onTrophyMenu"/>
+            android:onClick="onTrophyMenu" />
 
     </LinearLayout>
 
