--- a/app/src/main/res/layout/activity_pack_selector.xml
+++ b/app/src/main/res/layout/activity_pack_selector.xml
@@ -10,16 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.q20.projectsummer.ui.PackSelectorActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"></LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/recycler_trophy_menu"
-        android:scrollbars="vertical"/>
+    <com.pixelcan.inkpageindicator.InkPageIndicator
+        android:id="@+id/indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"></com.pixelcan.inkpageindicator.InkPageIndicator>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"></android.support.v4.view.ViewPager>
 
 </LinearLayout>
