--- a/app/src/main/res/layout/activity_pack_selector.xml
+++ b/app/src/main/res/layout/activity_pack_selector.xml
@@ -5,6 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -12,11 +14,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.q20.projectsummer.ui.PackSelectorActivity">
 
-    <com.github.lzyzsd.circleprogress.DonutProgress
-        android:id="@+id/donut_progress"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_gravity="center">
 
+        <com.github.lzyzsd.circleprogress.DonutProgress
+            android:rotation="225"
+            android:id="@+id/donut_progress"
+            android:layout_width="@dimen/chart_size"
+            android:layout_height="@dimen/chart_size"
+            app:donut_unfinished_color="@color/colorA17"
+            app:donut_finished_color="@color/colorA6"/>
+
+        <ImageButton
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            android:layout_width="@dimen/chart_btn_size"
+            android:layout_height="@dimen/chart_btn_size"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_circle" />
+
+    </FrameLayout>
 
 </LinearLayout>
