--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">@color/colorA7</color>
     <color name="colorPrimaryDark">@color/colorA8</color>
     <color name="colorAccent">@color/colorA14</color>
+    <color name="transparent">#9F000000</color>
 
     <color name="colorA1">#1ABC9C</color>
     <color name="colorA2">#16A085</color>
