--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="view_padding_size">16dp</dimen>
 
     <dimen name="btn_radius">8dp</dimen>
     <dimen name="btn_main_padding_top_down">8dp</dimen>
@@ -19,4 +20,12 @@
     <dimen name="buy_coin_margin">10dp</dimen>
     <dimen name="basket_size">60dp</dimen>
     <dimen name="buy_coin_padding">20dp</dimen>
+
+    <dimen name="register_fragment_container_size">300dp</dimen>
+    <dimen name="register_button_width_size">150dp</dimen>
+    <dimen name="register_button_height_size">40dp</dimen>
+    <dimen name="register_profile_image_size">80dp</dimen>
+    <dimen name="register_text_views_height">40dp</dimen>
+    <dimen name="register_text_views_fonts_height">40sp</dimen>
+
 </resources>
