commit ranking page my name is mohammadmahdi version 2 just a color change

--- a/app/src/main/res/layout/activity_ranking_page.xml
+++ b/app/src/main/res/layout/activity_ranking_page.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorA7"
+    android:background="@color/colorPrimary"
     tools:context="com.q20.projectsummer.ui.RankingPageActivity">
 
     <LinearLayout
