--- a/app/src/main/res/layout/fragment_register_choose_profile_image.xml
+++ b/app/src/main/res/layout/fragment_register_choose_profile_image.xml
@@ -33,7 +33,8 @@
             android:textColor="@color/colorA17"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
