--- a/app/src/main/res/layout/fragment_register_choose_user_name.xml
+++ b/app/src/main/res/layout/fragment_register_choose_user_name.xml
@@ -32,7 +32,8 @@
             android:textColor="@color/colorA17"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_gravity="center"/>
 
         <Space
             android:layout_width="match_parent"
