--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">@color/colorA8</color>
     <color name="colorAccent">@color/colorA7</color>
     <color name="transparent">#9F000000</color>
+    <color name="btn_letter">@color/colorA1</color>
+    <color name="btn_keyboard">@color/colorA17</color>
 
     <color name="colorA1">#1ABC9C</color>
     <color name="colorA2">#16A085</color>
