--- a/app/src/main/res/layout/activity_test_responsivity.xml
+++ b/app/src/main/res/layout/activity_test_responsivity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,9 +7,34 @@
 
 
     <com.q20.projectsummer.ResponsiveViews.ResponsiveTextView
-        android:layout_marginTop="350dp"
         android:id="@+id/text_test"
-        android:background="@color/colorA1"
-        android:layout_width="400dp"
-        android:layout_height="30dp" />
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorA1" />
+
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+        android:layout_marginLeft="50dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@color/colorA6">
+
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="100dp"
+            android:background="@color/colorA12">
+
+            <com.q20.projectsummer.ResponsiveViews.ResponsiveTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="25dp"
+                android:background="@color/colorA5" />
+        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
+    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
+
 </RelativeLayout>
